Hotfix/layout bugs (#23)
* fix: :bug: fix the header redirect bugs

* fix: :adhesive_bandage: fix productCart layout

* fix: :adhesive_bandage: fix checkoutAddress layout

* feat: :sparkles: add orderSummary navigation

* feat: :sparkles: add productList to home page

--- a/src/components/UI/productCart/productCart.module.css
+++ b/src/components/UI/productCart/productCart.module.css
@@ -12,21 +12,16 @@
 .cartContainer .column {
   display: flex;
   flex-direction: column;
+  margin-right: 4em;
 }
-.cartContainer .details {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
+.coffee_name {
   margin-bottom: 8px;
-  gap: 30px;
-}
-.cartContainer .details h2 {
   font-size: 16px;
   line-height: 130%;
   color: var(--base-subtitle);
   font-weight: 400;
 }
-.cartContainer .details span {
+.price {
   font-size: 16px;
   font-weight: 700;
   line-height: 130%;
